--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,54 +1,9 @@
-$theme-blue: #0d6efd;
-$theme-indigo: #6610f2;
-$theme-purple: #6f42c1;
-$theme-pink: #d63384;
-$theme-red: #dc3545;
-$theme-orange: #fd7e14;
-$theme-yellow: #ffc107;
-$theme-green: #198754;
-$theme-teal: #20c997;
-$theme-cyan: #0dcaf0;
-
-
-$primary: #00f;
-
-@import "./all-bootstrap.scss";
+@use "./vars";
+@import "./bs-norm.scss";
 @import "./themes/themes.scss";
+////////////////////////////////////////
 
-.btn-theme-blue {
-  @include button-variant($theme-blue, darken($theme-blue, 3%));
-
-  // optitional
-  // color: #fff; #uncomment and add your color
-}
-
-.btn-theme-indigo {
-  @include button-variant($theme-indigo, darken($theme-indigo, 3%));
-}
-.btn-theme-purple {
-    @include button-variant($theme-purple, darken($theme-purple, 3%));
-}
-.btn-theme-pink {
-    @include button-variant($theme-pink, darken($theme-pink, 3%));
-}
-.btn-theme-red {
-    @include button-variant($theme-red, darken($theme-red, 3%));
-}
-.btn-theme-orange {
-    @include button-variant($theme-orange, darken($theme-orange, 3%));
-}
-.btn-theme-yellow {
-    @include button-variant($theme-yellow, darken($theme-yellow, 3%));
-}
-.btn-theme-green {
-    @include button-variant($theme-green, darken($theme-green, 3%));
-}
-.btn-theme-teal {
-    @include button-variant($theme-teal, darken($theme-teal, 3%));
-}
-.btn-theme-cyan {
-    @include button-variant($theme-cyan, darken($theme-cyan, 3%));
-}
-
-
-
+@import "./utils";
+@import './root';
+@import "./tyop";
+@import './colors';
